--- a/OLD_download_bars.ipynb
+++ b/OLD_download_bars.ipynb
@@ -5,6 +5,8 @@
    "metadata": {},
    "source": [
     "# 6.1 Downloading raw prices\n",
+    "OLD CODE: we now use flatfiles!\n",
+    "\n",
     "Because we already created functions in notebook 1 to download 1-minute tickers, this is easy. We need to keep in mind that a lot of stocks such as SPACs have almost no price data. So there are a lot of empty bars. Some stocks don't even have 1 trade for the entire day. However, I cannot remove them either. Because if for one week the stock has a lot of activity, my trading systems may still trade it. That is the curse of the HTB small caps space. I cannot just filter on monthly liquidity."
    ]
   },
@@ -184,203 +186,6 @@
     "        data = download_m1_raw_data(ticker = ticker, from_ = row[\"start_date\"], to = end_date, columns = [\"open\", \"high\", \"low\", \"close\", \"volume\"], client=client)\n",
     "        data.to_parquet(DATA_PATH + f\"raw/m1/{id}.parquet\", engine=\"fastparquet\", compression=\"snappy\", row_group_offsets=25000)\n",
     "        print(f'Downloading {id}')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Flat files\n",
-    "Goal: download the flatfiles and split them into individual ticker files."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "import pytz\n",
-    "import gzip\n",
-    "import calendar\n",
-    "from pytz import timezone\n",
-    "from times import get_market_dates\n",
-    "import boto3\n",
-    "from botocore.config import Config\n",
-    "\n",
-    "START_DATE = date(2003, 9, 10)\n",
-    "END_DATE = date(2024, 4, 19)\n",
-    "\n",
-    "session = boto3.Session(\n",
-    "   aws_access_key_id='7203c471-037b-4944-96b0-effc0d3911b3',\n",
-    "   aws_secret_access_key='IOOFCMHAT7plpPitNmqFICLdG1AnhC5l',\n",
-    ")\n",
-    "s3 = session.client(\n",
-    "   's3',\n",
-    "   endpoint_url='https://files.polygon.io',\n",
-    "   config=Config(signature_version='s3v4'),\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Initial download\n",
-    "Download everything"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 94,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for day in get_market_dates(date(2003, 9, 10), END_DATE):\n",
-    "    destination = DATA_PATH + f'raw/flatfiles/{day.isoformat()}.csv.gz'\n",
-    "    s3.download_file('flatfiles', \n",
-    "                f'us_stocks_sip/minute_aggs_v1/{day.year}/{day.strftime(\"%m\")}/{day.isoformat()}.csv.gz', \n",
-    "                destination)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Extract and concatenate into monthly files"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def concatenate_and_save(start_date, end_date, file_name):\n",
-    "    files = []\n",
-    "    market_dates = get_market_dates(start_date, end_date)\n",
-    "    if len(market_dates) == 0:\n",
-    "        return\n",
-    "    for day in market_dates:\n",
-    "        destination = DATA_PATH + f'raw/flatfiles/{day.isoformat()}.csv.gz'\n",
-    "        with gzip.open(destination) as f:\n",
-    "            all_bars = pd.read_csv(f)\n",
-    "            all_bars = all_bars[['window_start', 'ticker', 'open', 'high', 'low', 'close', 'volume']]\n",
-    "            all_bars = all_bars.rename(columns={'window_start': 'datetime'})\n",
-    "            all_bars = all_bars.set_index('datetime')\n",
-    "            all_bars.index = pd.to_datetime(all_bars.index, unit='ns') # Convert to datetime (UTC-naive)\n",
-    "            # Make UTC aware (in order to convert)\n",
-    "            # Convert UTC to ET\n",
-    "            # Make timezone naive\n",
-    "            all_bars.index = all_bars.index.tz_localize(pytz.UTC).tz_convert(\"US/Eastern\").tz_localize(None)  \n",
-    "\n",
-    "            files.append(all_bars)\n",
-    "            print(day)\n",
-    "        \n",
-    "    all_bars = pd.concat(files)\n",
-    "    all_bars = all_bars.reset_index()\n",
-    "    all_bars = all_bars.set_index('ticker')\n",
-    "    all_bars = all_bars.sort_index()\n",
-    "\n",
-    "    all_bars.to_parquet(DATA_PATH + f\"raw/flatfiles/{file_name}.parquet\", engine=\"fastparquet\", compression=\"snappy\", row_group_offsets=25000)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for year in range(2003, 2024 + 1):\n",
-    "    files = []\n",
-    "    for month in range(1, 12 + 1):\n",
-    "        _, end_date = calendar.monthrange(year, month)\n",
-    "        concatenate_and_save(date(year, month, 1), date(year, month, end_date), f\"{year}-{month}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for year in range(2003, 2024+1):\n",
-    "    files = []\n",
-    "    for month in range(1, 12+1):\n",
-    "        if not os.path.isfile(DATA_PATH + f\"raw/flatfiles/{year}-{month}.parquet\"):\n",
-    "            continue\n",
-    "        \n",
-    "        all_bars = pd.read_parquet(DATA_PATH + f\"raw/flatfiles/{year}-{month}.parquet\")\n",
-    "\n",
-    "        for ticker in list(set(all_bars.index.unique())):\n",
-    "            bars = all_bars.loc[ticker]\n",
-    "            if isinstance(bars, pd.Series):\n",
-    "                bars = all_bars.loc[[ticker]]\n",
-    "            bars = bars[['datetime', 'open', 'high', 'low', 'close', 'volume']]\n",
-    "            bars = bars.set_index('datetime')\n",
-    "\n",
-    "            if os.path.isfile(DATA_PATH + f'raw/m1/{ticker}.parquet'):\n",
-    "                write(DATA_PATH + f\"raw/m1/{ticker}.parquet\", bars, append=True, compression=\"snappy\", row_group_offsets=25000)\n",
-    "            else:\n",
-    "                bars.to_parquet(DATA_PATH + f\"raw/m1/{ticker}.parquet\", engine=\"fastparquet\", compression=\"snappy\", row_group_offsets=25000)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Updates\n",
-    "Process day-by-day"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def process_flatfile(local_file_path):\n",
-    "    \"\"\"Unzips the flat file and split or append it to ticker files.\n",
-    "    \"\"\"\n",
-    "    with gzip.open(local_file_path) as f:\n",
-    "        all_bars = pd.read_csv(f)\n",
-    "        all_bars = all_bars[['window_start', 'ticker', 'open', 'high', 'low', 'close', 'volume']]\n",
-    "        all_bars = all_bars.rename(columns={'window_start': 'datetime'})\n",
-    "        all_bars = all_bars.set_index('datetime')\n",
-    "        all_bars.index = pd.to_datetime(all_bars.index, unit='ns') # Convert to datetime (UTC-naive)\n",
-    "        all_bars.index = all_bars.index.tz_localize(pytz.UTC)  # Make UTC aware (in order to convert)\n",
-    "        all_bars.index = all_bars.index.tz_convert(\"US/Eastern\")  # Convert UTC to ET\n",
-    "        all_bars.index = all_bars.index.tz_localize(None)  # Make timezone naive\n",
-    "        \n",
-    "        for ticker in all_bars['ticker'].unique():\n",
-    "            bars = all_bars[all_bars['ticker'] == ticker]\n",
-    "            bars = bars[['open', 'high', 'low', 'close', 'volume']]\n",
-    "\n",
-    "            if os.path.isfile(DATA_PATH + f'raw/m1/{ticker}.parquet'):\n",
-    "                write(DATA_PATH + f\"raw/m1/{ticker}.parquet\", bars, append=True, compression=\"snappy\", row_group_offsets=25000)\n",
-    "            else:\n",
-    "                bars.to_parquet(DATA_PATH + f\"raw/m1/{ticker}.parquet\", engine=\"fastparquet\", compression=\"snappy\", row_group_offsets=25000)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for day in get_market_dates(START_DATE, END_DATE):\n",
-    "    destination = DATA_PATH + f'raw/{day.isoformat()}.csv.gz'\n",
-    "    s3.download_file('flatfiles', \n",
-    "                 f'us_stocks_sip/minute_aggs_v1/{day.year}/{day.strftime(\"%m\")}/{day.isoformat()}.csv.gz', \n",
-    "                 destination)\n",
-    "    process_flatfile(destination)\n",
-    "    os.remove(destination)"
    ]
   }
  ],
