--- a/test.ipynb
+++ b/test.ipynb
@@ -224,6 +224,134 @@
     ")\n",
     "df = dataset.read()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sec_edgar_api import EdgarClient\n",
+    "edgar = EdgarClient(user_agent=\"shinathan python project\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "top = edgar.get_submissions(cik=\"1848275\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['cik',\n",
+       " 'entityType',\n",
+       " 'sic',\n",
+       " 'sicDescription',\n",
+       " 'insiderTransactionForOwnerExists',\n",
+       " 'insiderTransactionForIssuerExists',\n",
+       " 'name',\n",
+       " 'tickers',\n",
+       " 'exchanges',\n",
+       " 'ein',\n",
+       " 'description',\n",
+       " 'website',\n",
+       " 'investorWebsite',\n",
+       " 'category',\n",
+       " 'fiscalYearEnd',\n",
+       " 'stateOfIncorporation',\n",
+       " 'stateOfIncorporationDescription',\n",
+       " 'addresses',\n",
+       " 'phone',\n",
+       " 'flags',\n",
+       " 'formerNames',\n",
+       " 'filings']"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(top.keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'K3'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "top['addresses']['mailing']['stateOrCountry']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "DATA_PATH = \"../data/polygon/\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_bars = pd.read_parquet(DATA_PATH + f\"raw/flatfiles/2022-8.parquet\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12227"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(list(all_bars.index.unique()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stock = pd.read_parquet(DATA_PATH + f\"raw/m1/RBKB.parquet\")\n"
+   ]
   }
  ],
  "metadata": {
