delete duplicates in adjustments

--- a/05_download_adjustments.ipynb
+++ b/05_download_adjustments.ipynb
@@ -18,9 +18,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Nathan\\miniconda3\\envs\\algotrading\\Lib\\site-packages\\pandas\\core\\arrays\\masked.py:60: UserWarning: Pandas requires version '1.3.6' or newer of 'bottleneck' (version '1.3.5' currently installed).\n",
+      "  from pandas.core import (\n"
+     ]
+    }
+   ],
    "source": [
     "from polygon.rest import RESTClient\n",
     "from datetime import datetime, date, time, timedelta\n",
@@ -52,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,6 +81,8 @@
     "        raise Exception('There is no _end_date.txt file!')\n",
     "        \n",
     "for index, row in tickers_v3.iterrows():\n",
+    "    if index <= 5739:\n",
+    "        continue\n",
     "    ticker = row[\"ticker\"]\n",
     "    end_date = row[\"end_date\"]\n",
     "\n",
@@ -138,11 +149,91 @@
     "            \n",
     "        all_adjustments.to_csv(path, index=False)\n",
     "    else:\n",
+    "        # Sometimes the adjustments are duplicated because multiple tickers or for no reason.\n",
+    "        if not all_adjustments[all_adjustments['type'] == 'DIV'].empty:\n",
+    "            dividends = all_adjustments[all_adjustments['type'] == 'DIV']\n",
+    "            indices_to_remove = dividends[dividends[['date', 'type']].duplicated(keep='last')].index\n",
+    "            all_adjustments = all_adjustments.drop(index=indices_to_remove)\n",
+    "        if not all_adjustments[all_adjustments['type'] == 'SPLIT'].empty:\n",
+    "            splits = all_adjustments[all_adjustments['type'] == 'SPLIT']\n",
+    "            indices_to_remove = splits[splits[['date', 'type']].duplicated(keep='last')].index\n",
+    "            all_adjustments = all_adjustments.drop(index=indices_to_remove)\n",
     "        adjustments.to_csv(path, index=False)\n",
     "\n",
     "# Set the END_DATE to end_date.txt\n",
     "with open(POLYGON_DATA_PATH + \"raw/adjustments/_end_date.txt\", 'w') as f:\n",
     "    f.write(f'{END_DATE}\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>ticker</th>\n",
+       "      <th>name</th>\n",
+       "      <th>active</th>\n",
+       "      <th>start_date</th>\n",
+       "      <th>end_date</th>\n",
+       "      <th>type</th>\n",
+       "      <th>cik</th>\n",
+       "      <th>composite_figi</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>5739</th>\n",
+       "      <td>ESCA-2003-09-10</td>\n",
+       "      <td>ESCA</td>\n",
+       "      <td>Escalade Inc</td>\n",
+       "      <td>True</td>\n",
+       "      <td>2003-09-10</td>\n",
+       "      <td>2024-04-19</td>\n",
+       "      <td>CS</td>\n",
+       "      <td>33488.0</td>\n",
+       "      <td>BBG000BJ0H70</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   ID ticker          name  active  start_date    end_date  \\\n",
+       "5739  ESCA-2003-09-10   ESCA  Escalade Inc    True  2003-09-10  2024-04-19   \n",
+       "\n",
+       "     type      cik composite_figi  \n",
+       "5739   CS  33488.0   BBG000BJ0H70  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tickers_v3[tickers_v3['ticker'] == 'ESCA']"
    ]
   },
   {
