--- a/06_download_flatfiles.ipynb
+++ b/06_download_flatfiles.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Download flat files.\n",
+    "# Download flat files\n",
     "This was only possible from April 2024. We simply download everything and extract them to single ticker files."
    ]
   },
