--- a/14_fundamentals.ipynb
+++ b/14_fundamentals.ipynb
@@ -47,6 +47,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "TO CHANGE: at the date of a ticker change, also get the SIC and marketcap."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
